hphp/hack/test/typecheck/T120247995.php.exp
ERROR: File "T120247995.php", line 10, characters 13-16:
You are trying to access the method `ohno` but this is an int (Typing[4062])
  File "T120247995.php", line 5, characters 15-15:
  Definition is here
